fix collapse position on opened state in tablet up

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -70,6 +70,7 @@
     gap: 10px;
     .collapsible {
       width: 450px;
+      min-height: 220px;
     }
   }
   @include devices(tablet) {
@@ -78,6 +79,7 @@
     gap: 20px;
     .collapsible {
       width: 350px;
+      min-height: 220px;
     }
   }
 
